--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.7.14",
     "vue-chartjs": "3.5.1",
     "vue-i18n": "^8.18.2",
+    "vue-native-websocket": "^2.0.15",
     "vue-router": "3.6.5",
     "vue-router-prefetch": "^1.6.3",
     "vue2-transitions": "^0.3.0"
